syntax = "proto3";
package telemetry_ingestion_proto;

service TelemetryIngestion {
    rpc insert_process (Process) returns (InsertReply);
    rpc insert_stream(Stream) returns (InsertReply);
    rpc insert_block(Block) returns (InsertReply);
}

message Process{
    string process_id = 1;
    string exe = 2;
    string username = 3;
    string realname = 4;
    string computer = 5;
    string distro = 6;
    string cpu_brand = 7;
    uint64 tsc_frequency = 8;
    string start_time = 9; //RFC 3339
}

message InsertReply {
    string msg = 1;
}

message UDTMember{
    string name = 1;
    string type_name = 2;
    uint32 offset = 3;
    uint32 size = 4;
    bool is_reference = 5;
}

message UserDefinedType{
    string name = 1;
    uint32 size = 2;
    repeated UDTMember members = 3;
}

message ContainerMetadata{
    repeated UserDefinedType types = 1;
}

message Stream{
    string stream_id = 1;
    string process_id = 2;
    ContainerMetadata dependencies_metadata = 3;
    ContainerMetadata objects_metadata = 4;
    repeated string tags = 5;
}

message BlockPayload{
    bytes dependencies = 1;
    bytes objects = 2;
}

message Block{
    string block_id = 1;
    string stream_id = 2;
    //we send both RFC3339 times and ticks to be able to calibrate the tick frequency
    string begin_time = 3;
    uint64 begin_ticks = 4;
    string end_time = 5;
    uint64 end_ticks = 6;
    BlockPayload payload = 7;
}